# cddlib-cmake

./: CMakeLists.txt
doc/: CMakeLists.txt
lib-src/: CMakeLists.txt
src/: CMakeLists.txt
